--- a/meong-smp/bp/manifest.json
+++ b/meong-smp/bp/manifest.json
@@ -9,7 +9,7 @@
 	},
 	"metadata": {
 		"authors": ["KuroReichi"],
-		"url": "https://wiki.bedrock.dev/guide/introduction"
+		"url": "https://github.com/KuroReichi/"
 	},
 	"modules": [
 		{
