--- a/meong-smp/bp/manifest.json
+++ b/meong-smp/bp/manifest.json
@@ -1,7 +1,7 @@
 {
 	"format_version": 2,
 	"header": {
-		"name": "Meong SMP S1",
+		"name": "MiawSMP S1",
 		"description": "By KuroReichi (Private).",
 		"uuid": "1990a121-3ee2-4c1d-ba25-d8454911c4be",
 		"version": [ 1, 0, 0 ],
