--- a/meong-smp/bp/manifest.json
+++ b/meong-smp/bp/manifest.json
@@ -2,7 +2,7 @@
 	"format_version": 2,
 	"header": {
 		"name": "MiawSMP S1",
-		"description": "By KuroReichi (Private).",
+		"description": "By KuroReichi (Private Use).",
 		"uuid": "1990a121-3ee2-4c1d-ba25-d8454911c4be",
 		"version": [ 1, 0, 0 ],
 		"min_engine_version": [1, 21, 121]
