--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 		"description": "By KuroReichii (Private Use).",
 		"uuid": "1990a121-3ee2-4c1d-ba25-d8454911c4be",
 		"version": [ 1, 0, 0 ],
-		"min_engine_version": [1, 21, 130]
+		"min_engine_version": [1, 26]
 	},
 	"metadata": {
 		"authors": ["KuroReichii"],
@@ -19,7 +19,7 @@
 		},
 		{
 			"uuid": "239c134f-67bf-4738-9bcc-8c69d31b1f72",
-			"version": [ 1, 0, 9 ],
+			"version": [ 1, 2, 1 ],
 			"type": "script",
 			"language": "javascript",
 			"entry": "scripts/index.js"
